# HPC

./: AI岗位.md
LectureNotes/Lec01/: cpp_extension_mvp.py  main.py
cuda_foundation_knowledege/LectureNotes/Lec01/: cpp_extension.py
cuda_foundation_knowledege/reduce_cuda/1_cuda_reduce_study/: my_reduce_v0_global_memory.cu  my_reduce_v1_shared_memory.cu  my_reduce_v2_divergence_branch.cu
cuda_foundation_knowledege/universe_cuda/: CMakeLists.txt
doc/: AI与golang云生态相关.md
ray_tracing/: first_graph
ray_tracing/ray_tracing_in_one_week/: CMakeLists.txt
ray_tracing/ray_tracing_in_one_week/src/: camera.h  color.h  first_graph.cpp  hittable.h  hittable_list.h  interval.h  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
reduce_cuda/: CMakeLists.txt
reduce_cuda/1_cuda_reduce_study/: CMakeLists.txt
